// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upper-case-html-tag.html format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html><HTML></HTML>

=====================================output=====================================
<!DOCTYPE html><HTML></HTML>

================================================================================
`;

exports[`upper-case-html-tag-2.html format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html><HTML>
  <body>
    <div v-if="foo ===    'foo'">

</div>
    <script>
new Vue({el: '#app'})
    </script>
  </body>
</HTML>

=====================================output=====================================
<!DOCTYPE html>
<HTML>
  <body>
    <div v-if="foo ===    'foo'">

</div>
    <script>
new Vue({el: '#app'})
    </script>
  </body>
</HTML>

================================================================================
`;
